[package]
name = "libfdisk-sys"
version = "0.1.0"
authors = ["Jean Bouchard <jeanbouch418@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/hommeabeil/libfdisk-sys"
description = "Rust bindings for libfdisk"

[build-dependencies]
bindgen = "^0.51.1"

[lib]
path="lib.rs"

[dependencies]
libc="^0.2.65"
